--- a/css/main.css
+++ b/css/main.css
@@ -151,14 +151,14 @@ footer p {
     " img img img img";
   gap: 0.7rem;
   justify-content: center;
-  margin-top: 2.7rem;
+  margin-top: 1rem;
 }
 
 #cat-title {
   text-align: center;
   font-family: "Cinzel Decorative", serif;
   margin-top: 2rem;
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.7rem;
 }
 
 .categories {
@@ -271,8 +271,8 @@ footer p {
 }
 
 .line-fig {
-  height: 2rem;
-  width: 25rem;
+  height: 1rem;
+  width: 43rem;
   margin: auto;
 }
 
@@ -430,7 +430,6 @@ figcaption p {
 .cart-page {
   grid-area: buy;
   width: 30rem;
-  height: 40rem;
 }
 
 .cart2 {
@@ -450,6 +449,7 @@ figcaption p {
 
 .cart-book {
   width: 10rem;
+  height: 17rem;
 }
 
 .book-buying {
@@ -462,21 +462,78 @@ figcaption p {
 }
 
 .minus {
-  margin-top: 7.5rem;
+  margin-top: 0.8rem;
   height: 2rem;
   width: 2rem;
-  font-size: 2rem;
+  border: solid rgba(218, 218, 218, 0.642);
+  border-radius: 0.3rem;
 }
 
-.plus {
-  margin-top: 7.5rem;
+.plus-cart {
+  margin-top: 0.8rem;
   height: 2rem;
   width: 2rem;
-  font-size: 2rem;
+  border: solid rgba(218, 218, 218, 0.642);
+  border-radius: 0.3rem;
 }
 
 .number {
-  margin-top: 8rem;
+  margin-top: 0.8rem;
   font-family: "Karla", serif;
   font-size: 1.1rem;
+  border: solid rgb(209, 209, 209);
+  border-radius: 0.3rem;
+  height: 1.4rem;
+  padding-top: 0.25rem;
+  width: 3rem;
+  text-align: center;
+}
+
+.plus-cart-img {
+  width: 80%;
+  padding-top: 0.2rem;
+}
+
+.minus-img {
+  width: 80%;
+  padding-top: 0.3rem;
+}
+
+.cart-title {
+  margin-top: 6rem;
+  margin-bottom: 0;
+  font-family: "Karla", serif;
+}
+
+.cart-author {
+  font-family: "Karla", serif;
+  font-size: 0.7rem;
+  margin: 0;
+  color: rgb(68, 68, 68);
+}
+
+.add-delete {
+  display: flex;
+  gap: 1rem;
+  height: 4rem;
+}
+
+.cart-price {
+  margin: 0;
+  font-family: "Karla", serif;
+  color: rgb(10, 40, 91);
+  font-weight: bold;
+}
+
+.buy-now-button {
+  margin-left: 30rem;
+  margin-bottom: 2rem;
+  width: 5rem;
+  height: 2.5rem;
+  font-family: "Karla", serif;
+  font-size: 1rem;
+  color: white;
+  border: solid rgb(10, 40, 91);
+  border-radius: 0.3rem;
+  background-color: rgb(10, 40, 91);
 }
