Made pages responsive + minor changes

--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,34 @@ ul {
   width: 2.1rem;
 }
 
+@media screen and (max-width: 726px) {
+  #logo,
+  #logo-f {
+    font-size: 2rem;
+  }
+  .container-header {
+    flex-direction: column;
+  }
+  .container-logo {
+    margin-bottom: 0rem;
+  }
+  nav {
+    padding-top: 0rem;
+    height: 2.3rem;
+  }
+
+  ul {
+    margin-top: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 399px) {
+  #logo,
+  #logo-f {
+    font-size: 1.6rem;
+  }
+}
+
 /* main */
 body {
   margin: 0;
@@ -108,16 +136,16 @@ body {
   height: 4rem;
   font-family: "Karla", serif;
   font-size: 1.1rem;
-  background-color: rgb(85, 61, 163);
+  background-color: rgb(10, 40, 91);
   border-radius: 0.4rem;
-  border: solid rgb(85, 61, 163);
+  border: solid rgb(10, 40, 91);
   color: white;
   transition-duration: 0.3s;
 }
 
 .home-button:hover {
   background-color: white;
-  color: rgb(85, 61, 163);
+  color: rgb(10, 40, 91);
 }
 
 .home-b {
@@ -129,9 +157,27 @@ body {
   height: 4rem;
 }
 
+@media screen and (max-width: 726px) {
+  .right {
+    height: 6rem;
+  }
+  .container {
+    display: grid;
+    grid-template-areas:
+      "left"
+      "right";
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .home-text {
+    width: 20rem;
+  }
+}
+
 /* footer */
 footer {
-  background-color: rgb(85, 61, 163);
+  background-color: rgb(10, 40, 91);
   color: white;
   font-family: "Karla", serif;
   margin-top: 1rem;
@@ -281,6 +327,42 @@ footer p {
   margin-bottom: 1rem;
 }
 
+@media screen and (min-width: 1260px) {
+  .categories {
+    height: 7rem;
+    width: 14rem;
+    text-align: center;
+  }
+  .cat {
+    padding-top: 1.1rem;
+    font-size: 1.5rem;
+  }
+  .line-fig {
+    width: 80rem;
+  }
+  .book-header-fig {
+    width: 75%;
+    margin: auto;
+  }
+}
+@media screen and (max-width: 725px) {
+  .container-categories {
+    display: grid;
+    grid-template-areas:
+      " img img"
+      "img img"
+      " img img"
+      "img img";
+  }
+  .line-fig {
+    visibility: hidden;
+  }
+  .book-header-fig {
+    visibility: hidden;
+    height: 0rem;
+  }
+}
+
 /* Products */
 .container-products {
   display: grid;
@@ -357,6 +439,67 @@ figcaption p {
   color: black;
 }
 
+@media screen and (min-width: 1260px) {
+  .products {
+    width: 16rem;
+    height: 28rem;
+    margin: 0;
+  }
+
+  .book-info {
+    gap: 9.5rem;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .container-products {
+    display: grid;
+    grid-template-areas:
+      " img img img"
+      " img img img"
+      "img img img"
+      "img img img";
+  }
+}
+@media screen and (max-width: 565px) {
+  .container-products {
+    display: grid;
+    grid-template-areas:
+      " img img"
+      " img img"
+      "img img"
+      "img img"
+      "img img"
+      "img img";
+  }
+}
+@media screen and (max-width: 370px) {
+  .container-products {
+    display: grid;
+    grid-template-areas:
+      " img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img"
+      "img";
+  }
+  .products {
+    width: 17rem;
+    height: 30rem;
+    margin: 0;
+  }
+  .book-info {
+    gap: 10.5rem;
+  }
+}
+
 /* Product detail */
 
 .container-detail {
@@ -383,6 +526,7 @@ figcaption p {
 .detail-info {
   font-family: "Karla", serif;
   width: 20rem;
+  text-align: justify;
 }
 
 .title-dune {
@@ -420,6 +564,33 @@ figcaption p {
   background-color: rgb(10, 40, 91);
 }
 
+@media screen and (max-width: 880px) {
+  .container-detail {
+    grid-template-areas: "img" "text";
+  }
+  .dune-text {
+    margin-left: 4rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .dune-detail {
+    height: 28rem;
+  }
+  .dune-text {
+    margin-left: 2.8rem;
+  }
+
+  .detail-info {
+    font-family: "Karla", serif;
+    width: 18rem;
+    text-align: justify;
+  }
+  .detail-price {
+    display: flex;
+    gap: 7rem;
+  }
+}
 /* Shopping cart */
 
 .container-cart {
@@ -528,7 +699,7 @@ figcaption p {
 .buy-now-button {
   margin-left: 30rem;
   margin-bottom: 2rem;
-  width: 5rem;
+  width: 6rem;
   height: 2.5rem;
   font-family: "Karla", serif;
   font-size: 1rem;
